feat(planishare): add pwa config

--- a/src/index.html
+++ b/src/index.html
@@ -8,27 +8,21 @@
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700;800&amp;display=swap" rel="stylesheet">
 
   <!-- Material icons -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined&amp;display=swap" rel="stylesheet">
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  
-  <!-- Favicon config by https://realfavicongenerator.net/ -->
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/favicons/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicons/favicon-16x16.png">
-  <link rel="manifest" href="manifest.json">
-  <link rel="mask-icon" href="assets/favicons/safari-pinned-tab.svg" color="#5bbad5">
-  <meta name="msapplication-TileColor" content="#2d89ef">
-  <meta name="theme-color" content="#ffffff">
 
-  <meta name="google-site-verification" content="EXYxNowvZdNbm4UsXhYWBJKHzXujfDyvSs0WjA2-nMA" />
+  <meta name="google-site-verification" content="EXYxNowvZdNbm4UsXhYWBJKHzXujfDyvSs0WjA2-nMA"/>
   <meta name="description" content="Busca y comparte planificaciones de enseñanza básica.">
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#F8F6F1">
 </head>
 <body>
   <app-root></app-root>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
