feat(index): add book loader

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,9 @@
   <meta name="theme-color" content="#F8F6F1">
 </head>
 <body>
+  <div id="book-loader"><span></span></div>
+
   <app-root></app-root>
-  <noscript>Please enable JavaScript to continue using this application.</noscript>
+  <noscript>Por favor, activa JavaScript para continuar usando esta aplicación.</noscript>
 </body>
 </html>
