feat(post-form): Add new styles

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#F8F6F1">
 </head>
-<body>
+<body class="bg-background">
   <div id="book-loader"><span></span></div>
 
   <app-root></app-root>
