fix(planishare): Fix homepage call to action and post filters button

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <meta name="google-site-verification" content="EXYxNowvZdNbm4UsXhYWBJKHzXujfDyvSs0WjA2-nMA"/>
-  <meta name="description" content="Busca y comparte planificaciones de enseñanza básica.">
+  <meta name="description" content="Busca y comparte recursos educativos de enseñanza básica.">
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#F8F6F1">
 </head>
