feat(index.html): Add Open graph tags

--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,16 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <meta name="google-site-verification" content="EXYxNowvZdNbm4UsXhYWBJKHzXujfDyvSs0WjA2-nMA"/>
-  <meta name="description" content="Busca y comparte recursos educativos de enseñanza básica.">
+  <meta name="description" content="Busca y comparte recursos educativos de enseñanza básica. Podrás descargar los recursos subidos por la comunidad educativa o visualizalos dentro de Planishare.">
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#F8F6F1">
+
+  <meta property="og:type" content="business.business">
+  <meta property="og:title" content="Planishare - Recursos educativos gratis">
+  <meta property="og:url" content="https://planishare.web.app/">
+  <meta property="og:image" content="https://planishare.web.app/assets/images/college-project-cuate.png">
+  <meta property="og:description" content="Busca y comparte recursos educativos de enseñanza básica. Podrás descargar los recursos subidos por la comunidad educativa o visualizalos dentro de Planishare.">
+  <meta property="business:contact_data:country_name" content="Chile">
 </head>
 <body class="bg-background">
   <div id="book-loader"><span></span></div>
